# Embedded-CXX

programming-c++/oop/classes/: README.md
programming-c++/oop/classes/classes-and-objects/book/: book.cpp
programming-c++/oop/classes/copy-constructor/introduction/: README.md
programming-c++/oop/classes/copy-constructor/string-copy-constructor/: README.md  simple_string.cpp  simple_string.h  test.cpp
programming-c++/oop/classes/move-constructor/introduction/: README.md
programming-c++/oop/classes/move-constructor/string-move-constructor/: CMakeLists.txt  README.md  simple_string.cpp  simple_string.h  test.cpp
programming-c++/oop/inheritance/: README.md
programming-c++/oop/inheritance/introduction/: README.md
programming-c++/oop/operator-overloading/: README.md
programming-c++/oop/operator-overloading/introduction/: README.md
programming-c++/oop/operator-overloading/operator-arithmetic/Introduction/: README.md
programming-c++/oop/operator-overloading/operator-arithmetic/complex-number/: complex.cpp  complex.h
programming-c++/oop/operator-overloading/operator-arithmetic/string-concatination/: README.md  simple_string.cpp  simple_string.h  test.cpp
programming-c++/oop/operator-overloading/operator-assignment/introduction/: README.md
programming-c++/oop/operator-overloading/operator-assignment/string-assignment/: README.md  simple_string.cpp  simple_string.h  test.cpp
programming-c++/oop/operator-overloading/operator-relational/introduction/: README.md
programming-c++/stl/container/vector/: README.md
(+10 files in other folders)
